--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -194,12 +194,12 @@ button.accent {
     margin-top: 10px;
 }
 
-#chat-page {
+#game-page {
     position: relative;
     height: 100%;
 }
 
-.chat-container {
+.game-container {
     max-width: 700px;
     margin-left: auto;
     margin-right: auto;
@@ -211,7 +211,7 @@ button.accent {
     position: relative;
 }
 
-#chat-page ul {
+#game-page ul {
     list-style-type: none;
     background-color: #FFF;
     margin: 0;
@@ -221,83 +221,24 @@ button.accent {
     height: calc(100% - 150px);
 }
 
-#chat-page #messageForm {
-    padding: 20px;
-}
-
-#chat-page ul li {
+#game-page ul li {
     line-height: 1.5rem;
     padding: 10px 20px;
     margin: 0;
     border-bottom: 1px solid #f4f4f4;
 }
 
-#chat-page ul li p {
+#game-page ul li p {
     margin: 0;
 }
 
-#chat-page .event-message {
-    width: 100%;
-    text-align: center;
-    clear: both;
-}
-
-#chat-page .event-message p {
-    color: #777;
-    font-size: 14px;
-    word-wrap: break-word;
-}
-
-#chat-page .chat-message {
-    padding-left: 68px;
-    position: relative;
-}
-
-#chat-page .chat-message i {
-    position: absolute;
-    width: 42px;
-    height: 42px;
-    overflow: hidden;
-    left: 10px;
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 18px;
-    line-height: 42px;
-    color: #fff;
-    text-align: center;
-    border-radius: 50%;
-    font-style: normal;
-    text-transform: uppercase;
-}
-
-#chat-page .chat-message span {
-    color: #333;
-    font-weight: 600;
-}
-
-#chat-page .chat-message p {
-    color: #43464b;
-}
-
-#messageForm .input-group input {
-    float: left;
-    width: calc(100% - 85px);
-}
-
-#messageForm .input-group button {
-    float: left;
-    width: 80px;
-    height: 38px;
-    margin-left: 5px;
-}
-
-.chat-header {
+.game-header {
     text-align: center;
     padding: 15px;
     border-bottom: 1px solid #ececec;
 }
 
-.chat-header h2 {
+.game-header h2 {
     margin: 0;
     font-weight: 500;
 }
@@ -311,6 +252,71 @@ button.accent {
     width: 100%;
 }
 
+.navbar {
+	overflow: hidden;
+	background-color: #333;
+	font-family: Arial;
+}
+
+.navbar a {
+	float: left;
+	font-size: 16px;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+
+.homeDropdown {
+	float: left;
+	overflow: hidden;
+}
+
+.homeDropdown .homeDropdownBtn {
+	font-size: 16px;
+	border: none;
+	outline: none;
+	color: white;
+	padding: 14px 16px;
+	background-color: inherit;
+	font-family: inherity;
+	margin: 0;
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .homeDropdown:hover .homeDropdownBtn {
+  background-color: red;
+}
+
+/* Dropdown content (hidden by default) */
+.homeDropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.homeDropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.homeDropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.homeDropdown:hover .homeDropdown-content {
+  display: block;
+}
 
 @media screen and (max-width: 730px) {
 
