--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -255,7 +255,7 @@ button.accent {
 .navbar {
 	overflow: hidden;
 	background-color: #333;
-	font-family: Arial;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar a {
